# blocksnoop

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/commands/: ship.md
.github/workflows/: ci.yml  release.yml
blocksnoop/: __init__.py  cli.py  core.py  correlator.py  detector.py  profiler.py  reporter.py  sinks.py  stats.py
blocksnoop/bpf/: blockdetect.c
examples/: fastapi_server.py  mixed_workload.py
loopspy/: __init__.py  cli.py  core.py  correlator.py  detector.py  profiler.py  reporter.py  sinks.py
loopspy/bpf/: blockdetect.c
tests/: conftest.py  test_cli.py  test_core.py  test_correlator.py  test_detector.py  test_profiler.py  test_reporter.py  test_sinks.py  test_stats.py
tests/fixtures/: blocking_cpu.py  blocking_io.py
tests/integration/: conftest.py  test_blocking_cpu.py  test_blocking_io.py  test_cli.py
