[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopspy"
version = "0.1.0"
description = "Detect blocking calls in asyncio event loops using eBPF + py-spy"
readme = "README.md"
authors = [{name = "Paul Milesi"}]
license = "MIT"
requires-python = ">=3.12"
keywords = ["asyncio", "blocking", "ebpf", "event-loop", "profiling", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/PaulM5406/loopspy"
Repository = "https://github.com/PaulM5406/loopspy"
Issues = "https://github.com/PaulM5406/loopspy/issues"

[project.scripts]
loopspy = "loopspy.cli:main"

[project.optional-dependencies]
dev = ["ruff", "ty", "pytest"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["docker: integration tests requiring Docker"]
