[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blocksnoop"
version = "0.1.0"
description = "Detect blocking calls in asyncio event loops using eBPF + Austin"
readme = "README.md"
authors = [{name = "Paul Milesi"}]
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = ["austin-python"]
keywords = ["asyncio", "blocking", "ebpf", "event-loop", "profiling", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/PaulM5406/blocksnoop"
Repository = "https://github.com/PaulM5406/blocksnoop"
Issues = "https://github.com/PaulM5406/blocksnoop/issues"

[project.scripts]
blocksnoop = "blocksnoop.cli:main"

[project.optional-dependencies]
dev = ["ruff", "ty", "pytest"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["docker: integration tests requiring Docker"]
